fix - text area overflow styling

--- a/packages/ui/src/components/ESInputTextArea/ESInputTextArea.module.css
+++ b/packages/ui/src/components/ESInputTextArea/ESInputTextArea.module.css
@@ -28,17 +28,22 @@
   }
 
   /* Typography */
-  font: var(--esnet-typography-copy-1-sans-font,
-    400 16px/120% var(--esnet-font-family-body-sans));
+  font: var(
+    --esnet-typography-copy-1-sans-font,
+    400 16px/120% var(--esnet-font-family-body-sans)
+  );
 
   /* Pseudo-events */
   /* based on a pseudo event of input tag (invalid), thus included here */
   &.error {
     border-color: var(--esnet-color-core-red-700, #a6111b);
     border-width: var(--esnet-size-border-width-small, 0.125rem);
-    box-shadow: 0 0 0 var(--esnet-size-border-width-small) color-mix(in srgb,
+    box-shadow: 0 0 0 var(--esnet-size-border-width-small)
+      color-mix(
+        in srgb,
         var(--esnet-color-light-error, #a6111b) 26%,
-        transparent);
+        transparent
+      );
   }
 
   &:hover:not(.disabled),
@@ -46,7 +51,8 @@
   &:has(*:active):not(.disabled) {
     /* border color on focus takes precedence over error border color */
     border-color: var(--esnet-color-core-slate-1000, #30333b);
-    box-shadow: 0 0 0 var(--esnet-size-border-width-small, 0.125rem) var(--esnet-color-core-blue-400, #00b6f2);
+    box-shadow: 0 0 0 var(--esnet-size-border-width-small, 0.125rem)
+      var(--esnet-color-core-blue-400, #00b6f2);
   }
 
   /* based on a pseudo event of input tag (disabled), thus included here */
@@ -85,7 +91,6 @@
   all: unset;
   font: inherit;
   word-break: break-all;
-  width: 100%;
   padding: var(--esnet-size-spacing-xsmall, 8px);
   flex: 1;
   height: fit-content;
